syntax = "proto3";

package inventory;

option go_package = "./proto/inventorypb;inventorypb";

service InventoryService {
    rpc GetInventory (GetInventoryRequest) returns (InventoryResponse);
    rpc UpdateInventory (UpdateInventoryRequest) returns (InventoryResponse);
}

message GetInventoryRequest {
    string product_id = 1;
}

message UpdateInventoryRequest {
    string product_id = 1;
    int32 quantity_change = 2;
}

message InventoryResponse {
    string product_id = 1;
    int32 quantity = 2;
    string warehouse_location = 3;
}
